--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.22.0
-numpy==1.24.3
-opencv-python==4.7.0.72
-Pillow==9.5.0
-scipy==1.10.1
-scikit-image==0.20.0
+streamlit>=1.32.0
+numpy>=1.26.0
+opencv-python>=4.8.0  # Versi lebih baru untuk kompatibilitas Python 3.12
+Pillow>=10.0.0        # Update Pillow untuk Python 3.12
+scipy>=1.11.0         # Versi terbaru yang mendukung Python 3.12
+scikit-image>=0.21.0  # Update untuk menghindari konflik dengan numpy baru
